--- a/src/styles.css
+++ b/src/styles.css
@@ -38,7 +38,7 @@ body {
   }
   
   .content {
-    margin: 20px;
+    margin: 1% 12%;
     background-color: #f9f9f9;
     padding: 20px;
     border-radius: 8px;
@@ -116,6 +116,33 @@ body {
     border-radius: 4px;
     cursor: pointer;
   }
+
+  .delete-btn {
+    background-color: #ea2900;
+    color: black;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .create-btn {
+    background-color: #004d99;
+    color: white;
+    padding: 8px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+
+  .create-cut-btn {
+    background-color: #42b604;
+    color: white;
+    padding: 5px 10px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+  }
   
   .back-btn {
     margin-top: 20px;
@@ -128,5 +155,25 @@ body {
 
   .hidden {
     display: none;
+  }
+
+  /* ESTILO PARA MUESTRA DE ARCHIVOS */
+
+  .pdf-container {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+  }
+  .image-container {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
   }
   
