--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,10 +10,9 @@
       <div class="navbar-left">
         <div class="logo">{{ nombre_organizacion }}</div>
         <button (click)="redirectTo('/acceso')">Organizaciones</button>
-        <button (click)="redirectTo('/home')">Mis Proyectos</button>
-        <button (click)="redirectTo('/mis_recortes')">Mis Recortes</button>
-        <button *ngIf="admin" (click)="redirectToAdminProyectos()">Admin. Proyectos</button>
-        <button *ngIf="admin" (click)="redirectToAdminUsers()">Admin. Usuarios</button>
+        <button *ngIf="getRutaActual() !== '/acceso'" (click)="redirectToHome()">Mis Proyectos</button>
+        <button *ngIf="getRutaActual() !== '/acceso'" (click)="redirectToRecortes()">Mis Recortes</button>
+        <button *ngIf="admin && getRutaActual() !== '/acceso'" (click)="redirectToAdminUsers()">Admin. Usuarios</button>
         <button *ngIf="creator" (click)="redirectToCreator()">Crear Organizacion</button>
         <button type="button" (click)="logout()">Cerrar Sesión</button>
       </div>
