--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -53,7 +53,8 @@
 </head>
 <body>
   <div class="container">
-    <img src="https://e7.pngegg.com/pngimages/797/210/png-clipart-blueprint-architecture-blueprint-s-purple-blue.png" alt="Blueprint Image">
+    <!--<img src="https://e7.pngegg.com/pngimages/797/210/png-clipart-blueprint-architecture-blueprint-s-purple-blue.png" alt="Blueprint Image">-->
+    <img src="https://png.pngtree.com/png-vector/20190826/ourmid/pngtree-blueprint-png-image_1698942.jpg" alt="Blueprint Image">
     <h1>Bienvenido a la Página de Gestión de Proyectos</h1>
     <p>Una plataforma para administrar y supervisar tus proyectos de manera eficiente.</p>
     <button class="login-btn" (click)="login()">Iniciar Sesión</button>
