--- a/src/app/proyecto/proyecto-create/proyecto-create.component.html
+++ b/src/app/proyecto/proyecto-create/proyecto-create.component.html
@@ -2,7 +2,7 @@
 
     <main class="content">
 
-        <div class="page-title">Creando proyecto nuevo</div>
+        <div class="page-title-center">Creando proyecto nuevo</div>
 
         <form [formGroup]="proyectoForm">
             <input type="text" class="formControlName" id="nombre" formControlName="nombre" placeholder="nombre del proyecto">*
