--- a/src/styles.css
+++ b/src/styles.css
@@ -49,6 +49,13 @@ body {
     font-size: 24px;
     margin-bottom: 20px;
   }
+
+  .page-title-center {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center; 
+    width: 100%;
+  }
   
   .search-sort {
     display: flex;
